# bubblellaneous-pack

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  beet.json  build_packs.sh  format.sh  go.mod  latest  main.go  pack-assets.mcmeta  pack-data.mcmeta  pack.mcmeta  pyproject.toml
.github/workflows/: python-app.yml  release.yml
bubblellaneous/: compiler.go  food.go  furniture.go  miscellaneous.go  registry.go  technology.go
bubblellaneous/code/: section.go  template.go
bubblellaneous/unit/: block.go  category.go  interface.go  item.go  unit.go  variant.go
datapack/: pack.mcmeta
lib/: model_creator.go  tree.go
lib/code/: block_state.template  blockstate_update.template  load_blockstates.template  mcfunction.template  registry.template  section.go  template.go
lib/field/: block.go  block_state.go  block_type.go  food.go  item.go  loot.go  material.go  recipe.go
lib/lang/: lang.go  line.go
lib/nbt/: entry.go  snbt.go  tree.go  types.go
lib/util/: getter.go  itertool.go  path.go
minecraft/: lang.tsv  zh_cn.json
plugins/bubblellaneous/: __init__.py  blocks.py  items.py  main.py
plugins/constants/: __init__.py
plugins/lang/: __init__.py
plugins/prefix/: __init__.py
plugins/preprocessor/: __init__.py  pack_formats.py
plugins/utils/: __init__.py  nbt.py
resourcepack/: pack.mcmeta
src/: LICENSE  TODO.md  pack.mcmeta
templates/bake_blockstates/: call.py  manifest.json
templates/bake_registry/: call.py  manifest.json
templates/custom_block_state_models/: manifest.json
templates/custom_block_state_rules/: manifest.json
(+4512 files in other folders)
