[project]
name = "bubblellaneous"
version = "2.0.0"
description = "Adds new blocks and items"
authors = [{ name = "BubbleFish", email = "bbfh-dev@github.com" }]
dependencies = [
    "beet>=0.103.1",
    "case-converter>=1.1.0",
    "colorama>=0.4.6",
    "mergedeep>=1.3.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "colorama>=0.4.6",
    "black>=24.2.0",
    "autoimport>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
